syntax = "proto3";

message Request {
  int32 logical_time = 1;
  int32 sender_port = 2;
}

message Response {}

service LogicalTime {
  rpc update_time_logical(Request) returns (Response) {}
}
